# iot-mqtt-service

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
Requests/: iot_device.http
migrations/versions/: 85a827bdcc13_create_device_table.py
src/: main.py
src/db/: database.py
src/models/: __init__.py  device.py  entities.py  gateway.py  raw_mqtt_event.py  role.py  sensor_info.py  sensor_reading.py  user_auth.py  users.py
src/models/request/: gateway_request.py
src/models/response/: gateway_response.py  responses.py
src/mqtt/: frame_utils.py  mqtt_client.py  mqtt_service.py
src/repository/: Gateway_repository.py  db_repository.py  raw_mqtt_event_repository.py
src/router/: device_router.py  gateway_router.py  readings_router.py
src/service/: device_service.py  gateway_service.py  readings_service.py
